--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -28,10 +28,16 @@
     "extends": "react-app"
   },
   "scripts": {
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
-  }
+    "start": "npx rimraf ./build && npx react-scripts start",
+    "build": "npx react-scripts build",
+    "test": "cross-env CI=true npx react-scripts test --env=jsdom",
+    "eject": "npx react-scripts eject",
+    "lint": "npx eslint ./src/"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
